修复server编译错误

--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 ET框架：一个Unity客户端和分布式游戏服务器框架
 
+无缝大世界功能正在开发
+
 01.客户端服务端共用代码
 02.服务器使用组件设计，一切皆是组件
 03.单APP设计，各种服务器都是一个同样的App，在启动时根据命令行的AppType，不同的服务器挂载不同的逻辑组件，挂载不同的消息handler，挂载不同的配置
