--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+2017-4-17: IOS il2cpp p/invoke调用有很多bug，必须修改代码绕过去，增加了安卓和ios使用的enet库，安卓和ios都测试通过，方便大家使用
+
 2017-3-30: unity升级到5.5.2，增加vs调试启动参数，很多人问我，所以加上去了。增加主线程同步上下文，mongodb异步函数就能回调到主线程
 
 2017-2-17: 使用ILRuntime提供Unity C#代码热更新支持,并且抹平了Mono层和ILRuntime层差异,使用起来风格与原来用法保持一致, 扔掉你的lua代码吧!
