--- a/Doc/运行指南.md
+++ b/Doc/运行指南.md
@@ -21,7 +21,7 @@ visual studio tools for unity  .netcore2.0
 ##### 4. 点击鼠标右键即可移动人物
 
 # 注意事项：
-VS2017 15.4版本有bug，会提示Hotfix找不到Assembly-CSharp.dll,需要将Hotfix工程引用的Unity跟Unity.Plugin去掉，直接引用这两个工程生成的dll。  
+VS2017 15.4版本有bug，会提示Hotfix找不到Assembly-CSharp.dll,需要将Hotfix工程引用的Unity跟Unity.Plugin去掉，直接引用Unity\Library\ScriptAssemblies目录中Assembly-CSharp.dll跟Assembly-CSharp-firstpass.dll两个dll  
 
 一般出错原因都是 1.没编译。2.中文目录。3.vs没有安装vs tools或者不是最新的vs tools。4.没安装.netcore2.0
 
