更新运行指南，详细说明用unity打开vs方法

--- a/Doc/运行指南.md
+++ b/Doc/运行指南.md
@@ -6,7 +6,7 @@ visual studio tools for unity  .netcore2.0
 
 ##### 3. 启动unity2017， 菜单 File->open project->open 选中Egametang/Unity文件夹，点击选择文件夹按钮。
 
-##### 4.用vs2017打开Egametang/Unity/Unity.sln 编译（一定要编译，右键VS解决方案，全部编译）
+##### 4.点击Unity菜单Assets->open C# project启动vs 编译（一定要编译，右键VS解决方案，全部编译）
 
 ##### 5.用vs2017打开Egametang/Server/Server.sln 编译（一定要编译，右键VS解决方案，全部编译）
 
