删掉了enet，有了kcp就不需要enet了

--- a/Doc/运行指南.md
+++ b/Doc/运行指南.md
@@ -1,7 +1,7 @@
 ##### 1.visual studio必须使用vs2017，其它版本不支持，VS2017需要勾选安装以下内容:
-.net 桌面开发   
-使用C++的桌面开发，VC++ 2017 v141工具集，对C++的xp支持  
-visual studio tools for unity， .netcore2.0
+a. .net 桌面开发  
+b. visual studio tools for unity  
+c. .netcore2.0  
 ##### 2. unity一定要安装 unity 2017.1.0p5到2017.1.2，其它版本不支持
 
 ##### 3. 启动unity2017， 菜单 File->open project->open 选中Egametang/Unity文件夹，点击选择文件夹按钮。
