1.修复一个TimerComonent的bug 2.增加视频教程链接，运行指南更新

--- a/Doc/运行指南.md
+++ b/Doc/运行指南.md
@@ -1,4 +1,4 @@
-##### 1.visual studio必须使用vs2017，其它版本不支持，VS2017需要勾选安装以下内容:
+##### 1.visual studio必须使用vs2017（更新到最新版），其它版本不支持，VS2017需要勾选安装以下内容:
 a. .net 桌面开发  
 b. visual studio tools for unity  
 c. .netcore2.0  
@@ -22,7 +22,8 @@ VS2017 15.4版本vstools有bug，Hotfix工程请重新引用UnityEngin跟UnityEn
 1.出现LateUpate找不到表示没编译hotfix。  
 2.中文目录。  
 3.vs没有安装vs tools或者不是最新的vs tools。  
-4.没安装.netcore2.0  
+4.没安装.netcore2.0 
+5.VS要更新到最新的15.5.4版本
 
   
 ## 测试帧同步  
