--- a/Doc/运行指南.md
+++ b/Doc/运行指南.md
@@ -1,8 +1,8 @@
-##### 1.visual studio必须使用vs2017（更新到最新版），其它版本不支持，VS2017需要勾选安装以下内容:
+##### 1.visual studio必须使用vs2017（更新到最新版）, Unity必须2017以上, VS2017需要勾选安装以下内容:
 a. .net 桌面开发  
 b. visual studio tools for unity  
 c. .netcore2.0  
-##### 2. unity一定要安装 unity 2017.1.0p5到2017.1.2，其它版本不支持
+##### 2. unity一定要安装 unity 2017.1.0p5到2017.1.2，其它版本参考初见的爬坑教程（readme中有链接）,unity2018请自己摸索
 
 ##### 3. 启动unity2017， 菜单 File->open project->open 选中Egametang/Unity文件夹，点击选择文件夹按钮。
 
@@ -23,7 +23,7 @@ VS2017 15.4版本vstools有bug，Hotfix工程请重新引用UnityEngin跟UnityEn
 2.中文目录。  
 3.vs没有安装vs tools或者不是最新的vs tools。  
 4.没安装.netcore2.0 
-5.VS要更新到最新的15.5.4版本
+5.VS要更新到最新的15.5.4版本以上
 
   
 ## 测试帧同步  
