更新文档说明

--- a/Doc/运行指南.md
+++ b/Doc/运行指南.md
@@ -16,14 +16,14 @@ c. 去net core 官网下载安装 .net core 2.1
 ##### 8.运行Unity，输入帐号，点击登录这时日志 连接Gate成功，表示运行OK！
 
 
-# 测试帧同步  
+# 测试状态同步demo  
 ##### 1. 打开Unity->tools菜单->命令行配置，重启server
-##### 2. Unity->tools菜单->打包工具，选择PC，勾选是否打包exe，点击开始打包，打出一个PC包在Release目录下，
+##### 2. Unity->tools菜单->打包工具，选择PC，勾选是否打包exe，点击开始打包，打出一个PC包在Release目录下
 ##### 3. 启动unity菜单->tools->web资源服务器
 ##### 4. 运行Unity 登录 进入大厅 进入场景
-##### 5. 运行PC包 登录 进入大厅 这时会出现两个小人（重叠在一起）
+##### 5. 运行PC包 登录 进入大厅
 ##### 6. 点击鼠标右键即可移动人物
-##### 7. 假如不出现小人，请重启服务端，再次使用两个客户端重新登录。
+##### 7. 帧同步demo已经删除，需要的话请看ET4.0
 
 # 注意事项：
 
@@ -32,10 +32,10 @@ c. 去net core 官网下载安装 .net core 2.1
 2.中文目录。  
 3.vs没有安装vs tools或者不是最新的vs tools。  
 4.没安装 .net core 2.1  
-5.VS要更新到最新版本 
+5.VS要更新到最新版本  
 
 
-二. 目前ET模式使用ILRuntime模式无法单步调试，如果要切换到调试模式，删掉Unity的ILRuntime宏，删掉客户端Hotifx工程的ILRuntime宏，重新编译即可  
+二. 目前ET模式使用ILRuntime模式无法单步调试，如果要切换到调试模式，删掉Unity的ILRuntime宏，重新编译即可  
 
 三. 使用Il2cpp打包需要在unity中加上ILRuntime宏  
 
