--- a/Doc/运行指南.md
+++ b/Doc/运行指南.md
@@ -3,9 +3,9 @@
 a. .net 桌面开发  
 b. visual studio tools for unity  
 c. 去net core 官网下载安装 .net core 2.1  
-##### 2. unity2017.4版，unity2018请见底下说明
+##### 2. master分支需要unity2018.3版（目前还是beta版）, ET4.0使用unity2017.4版
 
-##### 3. 启动unity2017， 菜单 File->open project->open 选中ET/Unity文件夹，点击选择文件夹按钮。
+##### 3. 启动unity， 菜单 File->open project->open 选中ET/Unity文件夹，点击选择文件夹按钮。
 
 ##### 4.点击Unity菜单Assets->open C# project启动vs 编译（一定要编译，右键VS解决方案，全部编译）
 
@@ -16,14 +16,13 @@ c. 去net core 官网下载安装 .net core 2.1
 ##### 8.运行Unity，输入帐号，点击登录这时日志 连接Gate成功，表示运行OK！
 
 
-# 测试状态同步demo  
+# 测试状态同步demo， 帧同步demo已经删除，需要的话请看ET4.0
 ##### 1. 打开Unity->tools菜单->命令行配置，重启server
 ##### 2. Unity->tools菜单->打包工具，选择PC，勾选是否打包exe，点击开始打包，打出一个PC包在Release目录下
 ##### 3. 启动unity菜单->tools->web资源服务器
 ##### 4. 运行Unity 登录 进入大厅 进入场景
 ##### 5. 运行PC包 登录 进入大厅
 ##### 6. 点击鼠标右键即可移动人物
-##### 7. 帧同步demo已经删除，需要的话请看ET4.0
 
 # 注意事项：
 
@@ -38,7 +37,4 @@ c. 去net core 官网下载安装 .net core 2.1
 二. 目前ET模式使用ILRuntime模式无法单步调试，如果要切换到调试模式，删掉Unity的ILRuntime宏，重新编译即可  
 
 三. 使用Il2cpp打包需要在unity中加上ILRuntime宏  
-
-四. Unity2018使用方法：  
-打开项目，在unity中找到Unity.Hotfix, Unity.Model, Unity.Editor, Unity.ThirdParty，分别单击，在Inspector面板中勾选allow unsafe
 
