--- a/Doc/运行指南.md
+++ b/Doc/运行指南.md
@@ -7,13 +7,13 @@ c. 去net core 官网下载安装 .net core 2.1
 
 ##### 3. 启动unity2017， 菜单 File->open project->open 选中ET/Unity文件夹，点击选择文件夹按钮。
 
-##### 4.点击Unity菜单Assets->open C# project启动vs 编译（一定要编译，右键VS解决方案，全部编译）
+##### 4.点击Unity菜单Assets->open C# project启动vs 编译（一定要编译，右键VS解决方案，全部编译，即重新生成解决方案）
 
-##### 5.用vs2017打开ET/Server/Server.sln 编译（一定要编译，右键VS解决方案，全部编译）
+##### 5.用vs2017打开ET/Server/Server.sln 编译（一定要编译，右键VS解决方案，全部编译，即重新生成解决方案）
 
 ##### 6.打开Unity->tools菜单->命令行配置，选择LocalAllServer.txt 这是启动单一App的方式，如果要启动一组多App服务器，在命令行工具中选择127.0.0.1.txt,点击启动即可，具体配置都可以自己用这个命令行配置工具修改
 ##### 7.点击工具中的启动，这样就启动了服务端（也可以用VS启动，方便单步调试）
-##### 8.运行Unity，输入帐号，点击登录这时日志 连接Gate成功，表示运行OK！
+##### 8.打开Assets\Scenes\Init.unity场景，运行Unity，输入帐号，点击登录这时日志 连接Gate成功，表示运行OK！
 
 
 # 测试帧同步  
