--- a/Book/3.4事件机制EventSystem.md
+++ b/Book/3.4事件机制EventSystem.md
@@ -51,9 +51,9 @@ ET提供了多种事件，事件都是可以多次订阅的:
 5. ChangeSystem，组件内容改变时抛出，需要开发者手动触发
 ```csharp
     // 订阅Player的Destroy事件
-    public class PlayerDestroySystem: DestroySystem<Player>
+    public class PlayerChangeSystem: ChangeSystem<Player>
     {
-        public override void Destroy(Player self)
+        public override void Change(Player self)
         {
         }
     }
