1.更新运行指南 2.删除unity editor中的导表工具

--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -10,6 +10,10 @@ b. 去net core 官网下载安装 .net5
 
 ##### 5.用vs2019打开ET/Client-Server.sln 编译（一定要编译，右键VS解决方案，全部编译）
 
+##### 6.导表工具，编译完成后命令行进入Tools/ExcelExporter/Bin目录,执行dotnet ExcelExporter.dll
+
+##### 7.导出协议工具，编译完成后进入Tools/Proto2CS/Bin目录,执行dotnet  Proto2CS.dll
+
 
 # 测试状态同步demo， 帧同步demo已经删除，需要的话请看ET4.0
 ##### 1. 打开Unity->tools菜单->命令行配置，重启server
