--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -11,9 +11,9 @@
 
 5. 用vs2019打开 ET/Client-Server.sln 编译（**一定要全部工程编译，右键VS解决方案，全部编译**）
 
-6. 导表工具，编译完成后命令行进入 Tools/ExcelExporter/Bin 目录，执行 dotnet ExcelExporter.dll
+6. 导表工具，编译完成后命令行进入 Bin 目录，执行 dotnet Server.dll AppType=ExcelExport --Console=1  
 
-7. 导出协议工具，编译完成后进入 Tools/Proto2CS/Bin 目录，执行 dotnet  Proto2CS.dll
+7. 导出协议工具，编译完成后进入 Bin 目录，执行 dotnet Server.dll AppType=Proto2CS --Console=1  
 
 # 测试状态同步demo
 
