--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -1,23 +1,24 @@
 # 运行步骤  
-1. visual studio必须使用vs2019（更新到最新版）, VS2019需要勾选安装以下内容:
+1. visual studio必须使用vs2022（更新到最新版）, VS2022需要勾选安装以下内容:
    - .net 桌面开发  
-   - 去net core官网下载安装 .net5 
+   -  安装 .net6  
 
-2. master分支需要unity2020.3版（用到了C#8的语法）
+2. master分支需要unity2020.4版（用到了C#8的语法）  
 
-3. 启动Unity， 菜单 File -> Open Project... -> Open 选中ET/Unity文件夹，点击选择文件夹按钮。
+3. 启动Unity， 菜单 File -> Open Project... -> Open 选中ET/Unity文件夹，点击选择文件夹按钮。  
 
-4. 点击Unity菜单 Assets -> Open C# Project 启动vs编译
+4. 点击Unity菜单 Assets -> Open C# Project 启动vs  
 
-5. 用vs2019打开 ET/Client-Server.sln 编译（**一定要全部工程编译，右键VS解决方案，全部编译**）
+5. 运行Unity菜单上的 Tools->BuildDll，这一步将编译客户端代码  
 
-6. 导表工具，编译完成后命令行进入 Bin 目录，执行 dotnet Server.dll --AppType=ExcelExporter  
+6. 用vs2022打开 ET/Client-Server.sln 编译（**一定要全部工程编译，右键VS解决方案，全部编译**）
 
-7. 导出协议工具，编译完成后进入 Bin 目录，执行 dotnet Server.dll --AppType=Proto2CS  
+7. 导表工具，编译完成后命令行进入 Bin 目录，执行 dotnet Server.dll --AppType=ExcelExporter  
+
+8. 导出协议工具，编译完成后进入 Bin 目录，执行 dotnet Server.dll --AppType=Proto2CS  
+
+9. Unity中双击Scenes目录中的Init场景，点击Play即可运行
 # 测试状态同步demo
-
->  帧同步demo已经删除，需要的话请看ET4.0分支
-
 1. 想修改配置就进入 Excel 目录修改对应的表格，做运行步骤的第6步，然后重新运行 Server.App工程来启动服务端。
 
 2. Unity->tools菜单->打包工具，选择PC，勾选是否打包exe，点击开始打包，打出一个PC包在Release目录下
@@ -34,7 +35,7 @@
 
 1. 中文目录。  
 2. vs没有安装vs相关组件
-3. 没安装 .net5
+3. 没安装 .net6
 4. 没编译服务端所有工程
 5. VS要更新到最新版本  
 6. Unity版本太低
