--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -27,11 +27,12 @@
    Unity.ModelView UnityHotfix.View都会依赖Unity/Temp/Debug下的库。如果还是爆红，关闭vs或者rider，先打开unity，再打开Client-Server.sln，再
    编译Client-Server   
 
-8.  导表工具，编译完成后命令行进入 Bin 目录，执行 dotnet Tools.dll --AppType=ExcelExporter  
+8.  导表工具，编译完成后Unity菜单 Tools->ExcelExporter  
 
-9.  导出协议工具，编译完成后进入 Bin 目录，执行 dotnet Tools.dll --AppType=Proto2CS  
+9.  导出协议工具，编译完成后Unity菜单 Tools->Proto2CS  
 
-10. 启动服务器: dotnet Server.dll --Process=1 --Console=1
+10. 启动服务器: dotnet App.dll --Process=1 --Console=1 --StartConfig=StartConfig/Release  
+    windows可以从Unity菜单Tools->ServerTools启动  
 
 11.  Unity中双击Scenes目录中的Init场景，点击Play即可运行
 
