调整代码目录，更新运行指南

--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -7,13 +7,13 @@
      - 需要安装"使用Unity的游戏开发"扩展。
      - 需要在"工具-选项-适用于Unity的工具-常规"里，把杂项里的禁止完整生成项目改为False，否则导致你Codes目录里的代码报错。
 
-2. 使用Rider2021.2.2（更新到最新版）, 需要安装以下内容:
+2. 使用Rider2021.1.2（更新到最新版）, 需要安装以下内容:
    - Rider的Unity插件  
    - 安装 .net6  
    - 2021.2.2 会报".NET SDK 6.0.101 is not fully supported in Rider"，但实际不影响编译(2021.12.21)
    - 2021.3.x 完全支持 .net6
 
-3. master分支需要unity2020.3版（用到了C#8的语法）  
+3. master分支需要unity2021.3版（用到了C#10的语法）  
 
 4. 启动Unity， 菜单 File -> Open Project... -> Open 选中ET/Unity文件夹，点击选择文件夹按钮。  
 
@@ -21,11 +21,7 @@
 
 6. 运行Unity菜单上的 Tools->BuildCode，这一步将编译客户端代码  
 
-7. 用Rider打开 ET/Client-Server.sln 编译（**一定要全部工程编译，右键VS解决方案，全部编译**）
-   这里报红发现引用错误，是因为Unity的库还没编译到Unity/Temp/Debug目录下面，一般不用管，必须保证Unity是开启的，然后只需要直接编译Client-Server即可，
-   Client-Server会编译Unity.Mono。Unity.Mono会把自己依赖的Unity的库复制到Unity/Temp/Debug中。Unity.Model Unity.Hotfix 
-   Unity.ModelView UnityHotfix.View都会依赖Unity/Temp/Debug下的库。如果还是爆红，关闭vs或者rider，先打开unity，再打开Client-Server.sln，再
-   编译Client-Server   
+7. 用Rider打开 ET/ET.sln 编译（**一定要全部工程编译，右键VS解决方案，全部编译**）  
 
 8.  导表工具，编译完成后Unity菜单 Tools->ExcelExporter  
 
