--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -42,6 +42,24 @@
 7.如果提示meta不一致，说明没有打包两次
 
 
+
+# 帧同步运行：
+01. 启动Unity， Edit->Preferences->External Tools External ScriptEditor选择VS或者Rider， Generate .csproj files for全部不要勾选，VS需要在"工具-选项-适用于Unity的工具-常规"里，把杂项里的禁止完整生成项目改为False，否则导致你Codes目录里的代码报错。 
+
+02. Unity菜单 File -> Open Project... -> Open 选中ET/Unity文件夹，点击选择文件夹按钮。  
+
+03.  点击Unity菜单 Assets -> Open C# Project 启动IDE  
+
+04.  用Rider打开 ET/ET.sln 编译（**一定要全部工程编译，右键VS解决方案，全部编译**），这一步会复制Share.SourceGenerater.dll到unity中   
+
+05. 切换到Unity，选中Plugins/Share.SourceGenerator，Select platforms for plugin全部取消   
+
+06. 打开Unity菜单ET/BuildTool CodeMode选择Client Server, 点击ReGenerateProjectFiles。切换到Ide中编译Unity.Codes工程   
+
+07. Unity中双击Scenes目录中的Init场景，点击Play即可运行   
+
+帧同步打包过程注意，同上面打包一样，区别是为了方便测试，我让打出来的包直接加载了Unity/Temp/Bin/Debug/Codes.dll。代码在CodeLoader.cs 46行，大家真正打包应该加载ab包中的dll资源，要使用上面注释的代码
+
 # ENABLE_CODES模式
 1. 上面是把逻辑打成了一个dll，unity加载dll运行，这样Unity Editor将无法引用逻辑代码。如果Editor需要用到逻辑代码，可以开启ENABLE_CODES模式  
 2. Unity菜单ET/ChangeDefine/Add ENABLE_CODES即可添加ENABLE_CODES宏，这样逻辑代码将作为Editor模式放到Unity中，Editor代码就可以引用到逻辑代码  
