--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -50,17 +50,17 @@
 
 03. 点击Unity菜单 Assets -> Open C# Project 启动IDE  
 
-04. 用Rider打开 ET/ET.sln 编译（**一定要全部工程编译，右键VS解决方案，全部编译**），这一步会复制Share.SourceGenerater.dll到unity中   
+04. 选中Resources/GlobalConfig，把AppType改成LockStep  
 
-05. 切换到Unity，选中Plugins/Share.SourceGenerator，Select platforms for plugin全部取消   
+05. 打开Unity菜单ET/BuildTool CodeMode选择Client Server, 点击ReGenerateProjectFiles。  
 
-06. 选中Resources/GlobalConfig，把AppType改成LockStep  
+06. 打开ET.sln, 编译Unity.Codes工程，Model Hotfix ModelView HotfixView加载失败没有关系   
 
-07. 打开Unity菜单ET/BuildTool CodeMode选择Client Server, 点击ReGenerateProjectFiles。切换到Ide中编译Unity.Codes工程   
+07. Unity中双击Scenes目录中的Init场景，点击Play即可运行   
 
-08. Unity中双击Scenes目录中的Init场景，点击Play即可运行   
+08. 默认是一个人匹配，如果需要多人匹配，修改LSConstValue中的MatchCount即可  
 
-# 帧同步打包过程注意，同上面打包一样，区别是为了方便测试，我让打出来的包直接加载了Unity/Temp/Bin/Debug/Codes.dll。代码在CodeLoader.cs 46行，大家真正打包应该加载ab包中的dll资源，要使用上面注释的代码  
+09. 帧同步打包过程注意，同上面打包一样，区别是为了方便测试，我让打出来的包直接加载了Unity/Temp/Bin/Debug/Codes.dll。代码在CodeLoader.cs 46行，大家真正打包应该加载ab包中的dll资源，要使用上面注释的代码  
 
 # ENABLE_CODES模式，帧同步跟状态同步的demo含义完全相反，下面是以状态同步举例  
 1. 上面是把逻辑打成了一个dll，unity加载dll运行，这样Unity Editor将无法引用逻辑代码。如果Editor需要用到逻辑代码，可以开启ENABLE_CODES模式  
