1.Codes拆成AllHotfix跟AllModel两个程序集，方便热重载 2.ENABLE_CODES改成ENABLE_DLL，跟ET7区分一下，不然很多人反应不过来 3.更新HybridCLR到3.02

--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -54,19 +54,18 @@
 
 05. 打开Unity菜单ET/BuildTool CodeMode选择Client Server, 点击ReGenerateProjectFiles。  
 
-06. 打开ET.sln, 编译Unity.Codes工程，Model Hotfix ModelView HotfixView加载失败没有关系   
+06. 打开ET.sln, 编译Unity.AllHotfix工程，Model Hotfix ModelView HotfixView加载失败没有关系   
 
 07. Unity中双击Scenes目录中的Init场景，点击Play即可运行   
 
 08. 默认是一个人匹配，如果需要多人匹配，修改LSConstValue中的MatchCount即可  
 
-09. 帧同步打包过程注意，同上面打包一样，区别是为了方便测试，我让打出来的包直接加载了Unity/Temp/Bin/Debug/Codes.dll。代码在CodeLoader.cs 46行，大家真正打包应该加载ab包中的dll资源，要使用上面注释的代码  
+09. 帧同步打包过程注意，同上面打包一样，区别是为了方便测试，我让打出来的包直接加载了Unity/Temp/Bin/Debug/Model.dll跟Hotfix.dll。代码在CodeLoader.cs 42跟76行，大家真正打包应该加载ab包中的dll资源，要使用上面注释的代码  
 
-# ENABLE_CODES模式，帧同步跟状态同步的demo含义完全相反，下面是以状态同步举例  
-1. 上面是把逻辑打成了一个dll，unity加载dll运行，这样Unity Editor将无法引用逻辑代码。如果Editor需要用到逻辑代码，可以开启ENABLE_CODES模式  
-2. Unity菜单ET/ChangeDefine/Add ENABLE_CODES即可添加ENABLE_CODES宏，这样逻辑代码将作为Editor模式放到Unity中，Editor代码就可以引用到逻辑代码  
-3. ENABLE_CODES模式不需要再BuildModelAndHotfix，直接点击Play就能运行  
-4. ENABLE_CODES只能在编辑器模式下使用，打包必须去掉ENABLE_CODES宏
+# ENABLE_DLL模式  
+1. 该模式用于逻辑全热更新,还有热重载, 默认就是使用该模式  
+2. 在Unity菜单ET->ChangeDefines中开启关闭  
+3. 逻辑打成了一个Model.dll跟Hotfix.dll，unity加载dll运行，这样Unity Editor将无法引用逻辑代码。如果Editor需要用到逻辑代码，可以关闭ENABLE_DLL模式  
 
 
 # 测试状态同步demo
