更新ET8预览版说明

--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -1,83 +1,50 @@
 # 运行步骤  
 01. visual studio用户须知：
    - 版本：
-      - Win10及以上用户，使用.net6, VS 版本，必须使用2022及以上。注意，VS 2019 不支持 .net6，不能使用。
-   - 依赖：
-     - 需要安装"使用Unity的游戏开发"扩展。
-     - 需要在"工具-选项-适用于Unity的工具-常规"里，把杂项里的禁止完整生成项目改为False，否则导致你Codes目录里的代码报错。
+      - Win10及以上用户，使用.net6, VS 版本，必须使用2022及以上。注意，VS 2019 不支持 .net6，不能使用。  
+   - 依赖：  
+     - 需要安装"使用Unity的游戏开发"扩展。  
+     - 需要在"工具-选项-适用于Unity的工具-常规"里，把杂项里的禁止完整生成项目改为False，否则导致你Codes目录里的代码报错。  
+   - 不提供vs技术支持，用vs的用户请自己研究，不要来问我，我自己也没用过  
 
-02. 使用Rider2022.2.1（更新到最新版）, 需要安装以下内容:
+02. 使用Rider2023.1.3（更新到最新版）, 需要安装以下内容:
    - Rider的Unity插件  
    - 安装 .net6  
 
-03. master分支需要unity2021.3版（用到了C#10的语法）  
+03. master分支需要unity2021.16版（用到了C#11的语法）  
 
-04. 启动Unity， Edit->Preferences->External Tools External ScriptEditor选择VS或者Rider， Generate .csproj files for全部不要勾选    
+04. 启动Unity， Edit->Preferences->External Tools External ScriptEditor选择VS或者Rider， Generate .csproj files for全部不要勾选，VS需要在"工具-选项-适用于Unity的工具-常规"里，把杂项里的禁止完整生成项目改为False，否则导致你Codes目录里的代码报错。  
 
 05. Unity菜单 File -> Open Project... -> Open 选中ET/Unity文件夹，点击选择文件夹按钮。  
 
-06.  点击Unity菜单 Assets -> Open C# Project 启动vs  
+06. 点击Unity菜单 Assets -> Open C# Project 启动IDE  
 
-07.  打开Unity菜单ET/BuildTool 点击BuildModelAndHotfix，这一步将编译客户端代码  
+07. 选中Resources/GlobalConfig，把AppType选择Demo(状态同步)或者LockStep(帧同步)  
 
-08.  用Rider打开 ET/ET.sln 编译（**一定要全部工程编译，右键VS解决方案，全部编译**）  
+08. 打开Unity菜单ET/BuildTool CodeMode选择Client Server, 点击ReGenerateProjectFiles。  
 
-09. Unity中双击Scenes目录中的Init场景，点击Play即可运行  
+09. 打开ET.sln, 编译Unity.AllHotfix工程，Model Hotfix ModelView HotfixView加载失败没有关系   
 
-10. 注意这是ClientServer模式，Unity中运行了一个服务器。如果需要单独运行服务器，可以按照下面步骤：  
+10. Unity中双击Scenes目录中的Init场景，点击Play即可运行   
 
-11. 打开Unity菜单ET/ServerTool, 点击StartServer，启动服务器  
-
-12. 打开Unity菜单ET/BuildTool CodeMode选择Client, 点击BuildModelAndHotfix，这一步将编译客户端代码  
-
-13. 选中Resources/GlobalConfig，把AppType改成Demo，Unity中双击Scenes目录中的Init场景，点击Play即可运行  
+11. 帧同步默认是一个人匹配，如果需要多人匹配，修改LSConstValue中的MatchCount即可  
 
 # 打包过程:
-1.点击HybridCLR->Installer,把两个main改成2.31,点击安装,等待安装完成
-2.ET->BuildTool->BuildModelAndHotfix,编译好要热更的dll
-3.点击HybridCLR->Generate->all
-4.点击打包 (注意，这是第一次打包)
-5.点击HybridCLR->CopyAotDlls,这一步会把需要补充元数据的dll复制到Assets/Bundles/AotDlls目录，并且设置ab包标签
-6.点击打包 (注意，这是第二次打包)
-7.如果提示meta不一致，说明没有打包两次
+1.点击HybridCLR->Installer,点击安装,等待安装完成  
+2.用Rider,编译好Unity.AllHotfix  
+3.点击HybridCLR->Generate->all  
+4.点击HybridCLR->CopyAotDlls,这一步会把需要补充元数据的dll复制到Assets/Bundles/AotDlls目录  
+5.点击打包  
 
 
 
-# 帧同步运行：
-01. 启动Unity， Edit->Preferences->External Tools External ScriptEditor选择VS或者Rider， Generate .csproj files for全部不要勾选，VS需要在"工具-选项-适用于Unity的工具-常规"里，把杂项里的禁止完整生成项目改为False，否则导致你Codes目录里的代码报错。  
+# 运行：
 
-02. Unity菜单 File -> Open Project... -> Open 选中ET/Unity文件夹，点击选择文件夹按钮。  
-
-03. 点击Unity菜单 Assets -> Open C# Project 启动IDE  
-
-04. 选中Resources/GlobalConfig，把AppType改成LockStep  
-
-05. 打开Unity菜单ET/BuildTool CodeMode选择Client Server, 点击ReGenerateProjectFiles。  
-
-06. 打开ET.sln, 编译Unity.AllHotfix工程，Model Hotfix ModelView HotfixView加载失败没有关系   
-
-07. Unity中双击Scenes目录中的Init场景，点击Play即可运行   
-
-08. 默认是一个人匹配，如果需要多人匹配，修改LSConstValue中的MatchCount即可  
-
-09. 帧同步打包过程注意，同上面打包一样，区别是为了方便测试，我让打出来的包直接加载了Unity/Temp/Bin/Debug/Model.dll跟Hotfix.dll。代码在CodeLoader.cs 42跟76行，大家真正打包应该加载ab包中的dll资源，要使用上面注释的代码  
 
 # ENABLE_DLL模式  
 1. 该模式用于逻辑全热更新,还有热重载, 默认就是使用该模式  
 2. 在Unity菜单ET->ChangeDefines中开启关闭  
 3. 逻辑打成了一个Model.dll跟Hotfix.dll，unity加载dll运行，这样Unity Editor将无法引用逻辑代码。如果Editor需要用到逻辑代码，可以关闭ENABLE_DLL模式  
-
-
-# 测试状态同步demo
-1. 想修改配置就进入 Excel 目录修改对应的表格，做运行步骤的第6步，然后重新运行 Server.App工程来启动服务端。
-
-2. Unity->tools菜单->打包工具，选择PC，勾选是否打包exe，点击开始打包，打出一个PC包在Release目录下。
-
-3. 运行Unity 登录 进入大厅 进入场景
-
-4. 运行PC包 登录 进入大厅
-
-5. 点击鼠标右键即可移动人物
 
 # 注意事项：
 
