--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -9,7 +9,7 @@
 
 3. 启动UnityHub，打开(Open) -> 选中'ET/Unity'文件夹所在目录后打开工程
 
-4. 打开工程后，点击Unity菜单 -> Edit -> Preferences -> External Tools 在下拉框'**External ScriptEditor**'中**Rider**，Generate .csproj files for全部**不要勾选(□)**
+4. 打开工程后，点击Unity菜单 -> Edit -> Preferences -> External Tools，点击下拉框'**External ScriptEditor**'选择**Rider**，Generate .csproj files for全部**不要勾选(□)**
 
 5. 点击Unity菜单 -> Assets -> Open C# Project 启动IDE
 
@@ -17,7 +17,7 @@
 
 7. 打开Unity菜单 -> ET -> BuildTool，CodeMode选择**Client Server**，然后**点击ReGenerateProjectFiles**
 
-8. 打开ET.sln，**编译整个ET.sln**，注意要翻墙，否则可能nuget包下载不下来，导致编译出错
+8. 打开ET.sln，**编译整个ET.sln**，注意要翻墙，否则可能nuget包下载不下来，导致编译出错(翻墙后如果还有报错解决不了可以尝试先用VS打开ET.sln编译一次后再回到Rider重新编译一次)
 
 9. Unity中双击'Assets/Scenes'目录中的**Init**场景，点击Play(▶)即可运行
 
@@ -26,7 +26,7 @@
 # 打包过程
 1. 点击HybridCLR -> Installer，点击安装，等待安装完成
 
-2. 用Rider或VS，编译整个ET.sln工程
+2. 用Rider编译整个ET.sln工程(翻墙后如果还有报错解决不了可以尝试先用VS打开ET.sln编译一次后再回到Rider重新编译一次)
 
 3. 点击HybridCLR -> Generate -> All
 
@@ -41,7 +41,7 @@
 # 热重载
 1. 若需要体验此功能，需要在Unity菜单 -> Edit -> Preferences -> General窗口的 'ScriptChangesWhilePlaying' 中 选择 '**RecompileAfterFinishedPlaying**'
 
-2. 运行后修改'Hotfix'或'HotfixView'的代码然后用Rider或VS编译好对应的Hotfix工程，再在状态同步Demo中按'R'键
+2. 运行后修改'Hotfix'或'HotfixView'的代码然后用Rider编译好对应的Hotfix工程，再在状态同步Demo中按'R'键
 
 # 注意事项：
 
