更新运行指南

--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -5,9 +5,9 @@
    - 安装.Net8
    - 不支持VS，新人用VS搞出各种问题请不要来问我，我也没用过VS，后期搞熟了可以自己改用VS  
    
-2. master分支必须使用Unity**2022.3.15**(初学者请在此版本用熟后再切换其他版本)  
+2. release8.0分支必须使用Unity**2022.3.15**(初学者请在此版本用熟后再切换其他版本)  
 
-3. 启动UnityHub，打开(Open) -> 选中'ET/Unity'文件夹所在目录后打开工程  
+3. 启动UnityHub（注意：右键UnityHub，以管理员身份运行UnityHub），打开(Open) -> 选中'ET/Unity'文件夹所在目录后打开工程  
 
 4. 打开工程后，点击Unity菜单 -> Edit -> Preferences -> External Tools 在下拉框'**External ScriptEditor**'中**Rider**，Generate .csproj files for全部**不要勾选(□)**  
 
@@ -22,6 +22,10 @@
 9. Unity中双击'Assets/Scenes'目录中的**Init**场景，点击Play(▶)即可运行     
 
 10. 帧同步默认是一个人匹配，如果需要多人匹配，修改**LSConstValue.cs**中的**MatchCount**即可  
+    
+11. 注意要独立启动服务器，右键UnityHub，以管理员身份运行UnityHub，然后启动Unity（没有管理员启动是不行的，因为服务端要开启http服务，普通权限开不了），
+    停止Unity Play，点开Unity菜单->ET->Server Tools->Start Server(Single Process)，这样就单独启动了服务端。打开Unity菜单 -> ET -> BuildTool中CodeMode改成Client，点击Unity Play，登录。
+    如果还是连接不上报10037错误，注意看ET/Logs目录，看有没有Error日志
 
 # 打包过程
 1. 点击HybridCLR -> Installer，点击安装，等待安装完成  
