更新运行指南

--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -23,6 +23,10 @@
 
 10. 帧同步默认是一个人匹配，如果需要多人匹配，修改**LSConstValue.cs**中的**MatchCount**即可
 
+11. 注意要独立启动服务器，右键UnityHub，以管理员身份运行UnityHub，然后启动Unity（没有管理员启动是不行的，因为服务端要开启http服务，普通权限开不了），如果要用rider单独启动服务器也要右键用管理员权限运行rider
+    停止Unity Play，点开Unity菜单->ET->Server Tools->Start Server(Single Process)，这样就单独启动了服务端。打开Unity菜单 -> ET -> BuildTool中CodeMode改成Client，点击Unity Play，登录。
+    如果还是连接不上报10037错误，注意看ET/Logs目录，看有没有Error日志。
+
 # 打包过程
 1. 点击HybridCLR -> Installer，点击安装，等待安装完成
 
