--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -11,40 +11,34 @@
 
 4. 在Project视图中选中'Assets/Resources/GlobalConfig'，把AppType选择成'**Demo(状态同步)**'或者'**LockStep(帧同步)**'
 
-5. Assets/Resources/GlobalConfig CodeMode选择**Client Server**，打开Unity菜单 -> ET -> BuildTool，然后**点击ReGenerateProjectFiles**
+5. 打开ET.sln，**编译整个ET.sln**，注意要翻墙，否则可能nuget包下载不下来，导致编译出错(翻墙后如果还有报错解决不了可以尝试先用VS打开ET.sln编译一次后再回到Rider重新编译一次)
 
-6. 打开ET.sln，**编译整个ET.sln**，注意要翻墙，否则可能nuget包下载不下来，导致编译出错(翻墙后如果还有报错解决不了可以尝试先用VS打开ET.sln编译一次后再回到Rider重新编译一次)
+6. Unity中双击'Assets/Scenes'目录中的**Init**场景，点击Play(▶)即可运行
 
-7. Unity中双击'Assets/Scenes'目录中的**Init**场景，点击Play(▶)即可运行
+7. 帧同步默认是一个人匹配，如果需要多人匹配，修改**LSConstValue.cs**中的**MatchCount** 客户端服务端重启即可
 
-8. 帧同步默认是一个人匹配，如果需要多人匹配，修改**LSConstValue.cs**中的**MatchCount** 客户端服务端重启即可
-
-9. 注意要独立启动服务器，右键UnityHub，以管理员身份运行UnityHub，然后启动Unity（没有管理员启动是不行的，因为服务端要开启http服务，普通权限开不了），  
+8. 注意要独立启动服务器，右键UnityHub，以管理员身份运行UnityHub，然后启动Unity（没有管理员启动是不行的，因为服务端要开启http服务，普通权限开不了），
    停止Unity Play，点开Unity菜单->ET->Server Tools->Start Server(Single Process)，这样就单独启动了服务端。打开Unity菜单 -> ET -> BuildTool中CodeMode改成Client，点击Unity Play，登录。  
-   如果还是连接不上报10037错误，注意看ET/Logs目录，看有没有Error日志。 如果要用rider启动服务器，rider也必须用管理员权限启动   
-   注意一定要用 netsh http delete urlacl 命令删除掉所有自己添加的urlacl，具体使用方法请谷歌  
+   如果还是连接不上报10037错误，注意看ET/Logs目录，看有没有Error日志。 如果要用rider启动服务器，rider也必须用管理员权限启动
+   注意一定要用 netsh http delete urlacl 命令删除掉所有自己添加的urlacl，具体使用方法请谷歌
 
-10. 有问题请论坛提问，贴出服务端error log跟客户端error log，没有日志无法回复  
+9. 有问题请论坛提问，贴出服务端error log跟客户端error log，没有日志无法回复
 
 # 打包过程
 1. 点击HybridCLR -> Installer，点击安装，等待安装完成
 
-2. 点击Player按钮左边的Compile按钮进行编译
+2. 点击HybridCLR -> Generate -> All
 
-3. 点击HybridCLR -> Generate -> All
+3. 点击HybridCLR -> CopyAotDlls，这一步会把需要补充元数据的dll复制到'Assets/Bundles/AotDlls'目录
 
-4. 点击HybridCLR -> CopyAotDlls，这一步会把需要补充元数据的dll复制到'Assets/Bundles/AotDlls'目录
+4. 打开YooAsset菜单 -> 点击AssetBundle Builder -> 点击下拉框'Copy Buildin File Option' -> 选择'Clear And Copy All' -> 点击'构建'
 
-5. 打开YooAsset菜单 -> 点击AssetBundle Builder -> 点击下拉框'Copy Buildin File Option' -> 选择'Clear And Copy All' -> 点击'构建'
-
-6. Assets/Resources/GlobalConfig EPlayMode选择'HostPlayMode', 打开Unity菜单 -> ET -> BuildTool，点击'BuildPackage'，Windows下生成的exe在'ET/Release'里面
+5. Assets/Resources/GlobalConfig EPlayMode选择'HostPlayMode', 打开Unity菜单 -> ET -> BuildTool，点击'BuildPackage'，Windows下生成的exe在'ET/Release'里面
 
 另：**请自行研究**YooAsset包管理库的使用方式([YooAsset官网](https://www.yooasset.com/))，若需要升级请自行替换'ET/Unity/Packages/YooAsset'
 
 # 热重载
-1. 若需要体验此功能，需要在Unity菜单 -> Edit -> Preferences -> General窗口的 'ScriptChangesWhilePlaying' 中 选择 '**RecompileAfterFinishedPlaying**'
-
-2. 运行后修改代码，点击Player左边的Reload按钮即可
+1. 运行后修改代码直接保存即可
 
 # 注意事项：
 
