--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -11,7 +11,7 @@
 
 4. 在Project视图中选中'Assets/Resources/GlobalConfig'，把AppType选择成'**Demo(状态同步)**'或者'**LockStep(帧同步)**'
 
-5. Assets/Resources/GlobalConfig CodeMode选择**Client Server**, 点击Unity菜单 -> ET -> Compile & Reload(或按快捷键**F6**)进行编译
+5. Assets/Resources/GlobalConfig CodeMode选择**Client Server**, 点击Unity菜单 -> ET -> Compile(或按快捷键**F6**)进行编译
 
 6. 打开ET.sln，**编译整个ET.sln**，注意要翻墙，否则可能nuget包下载不下来，导致编译出错(翻墙后如果还有报错解决不了可以尝试先用VS打开ET.sln编译一次后再回到Rider重新编译一次)
 
@@ -29,7 +29,7 @@
 # 打包过程
 1. 点击HybridCLR -> Installer，点击安装，等待安装完成
 
-2. 点击Unity菜单 -> ET -> Compile & Reload(或按快捷键**F6**)进行编译
+2. 点击Unity菜单 -> ET -> Compile(或按快捷键**F6**)进行编译
 
 3. 点击HybridCLR -> Generate -> All
 
@@ -44,7 +44,7 @@
 # 热重载
 1. 若需要体验此功能，需要在Unity菜单 -> Edit -> Preferences -> General窗口的 'ScriptChangesWhilePlaying' 中 选择 '**RecompileAfterFinishedPlaying**'
 
-2. 运行后修改代码，点击Unity菜单 -> ET -> Compile & Reload(或按快捷键**F6**)进行编译并重载即可
+2. 运行后修改并编译代码，点击Unity菜单 -> ET -> Reload(或按快捷键**F7**)即可
 
 # 注意事项：
 
