--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -35,13 +35,15 @@
 
 4. 点击HybridCLR -> CopyAotDlls，这一步会把需要补充元数据的dll复制到'Assets/Bundles/AotDlls'目录
 
-5. 打开YooAsset -> AssetBundle Builder窗口，按照以下选项设置:
+5. 打开YooAsset -> AssetBundle Builder窗口，按照以下步骤操作:
 
    ①BuildPipeline : '**ScriptableBuildPipeline**'
 
    ②BuildMode : '**IncrementalBuild**'
 
    ③CopyBuildinFileOption : '**ClearAndCopyAll**'
+
+   ④点击'**Click Build**'
 
 6. Assets/Resources/GlobalConfig EPlayMode选择'HostPlayMode', 打开Unity菜单 -> ET -> BuildTool，点击'BuildPackage'，Windows下生成的exe在'ET/Release'里面
 
