--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -3,28 +3,30 @@
 
    **使用[Rider2023.3](https://www.jetbrains.com/zh-cn/rider/)**(更新到最新版)，需要安装以下内容：
    - 安装.Net8
-   - 不支持VS，新人用VS搞出各种问题请不要来问我，我也没用过VS，后期搞熟了可以自己改用VS
+   - 不支持VS，新人用VS搞出各种问题请不要来问我，我也没用过VS，后期搞熟了可以自己改用VS  
    
-2. 该分支必须使用Unity**2022.3.15**(初学者请在此版本用熟后再切换其他版本)
+2. 该分支必须使用Unity**2022.3.15**(初学者请在此版本用熟后再切换其他版本)  
+   
+3. 整个过程请开启全局翻墙，否则各种unity包 nuget包下载不下来，报memerypack等错误  
 
-3. 启动UnityHub，打开(Open) -> 选中'ET/Unity'文件夹所在目录后打开工程
+4. 启动UnityHub，打开(Open) -> 选中'ET/Unity'文件夹所在目录后打开工程  
 
-4. 在Project视图中选中'Assets/Resources/GlobalConfig'，把AppType选择成'**Demo(状态同步)**'或者'**LockStep(帧同步)**'
+5. 在Project视图中选中'Assets/Resources/GlobalConfig'，把AppType选择成'**Demo(状态同步)**'或者'**LockStep(帧同步)**'  
 
-5. Assets/Resources/GlobalConfig CodeMode选择**Client Server**, 点击Unity菜单 -> ET -> Compile(或按快捷键**F6**)进行编译
+6. Assets/Resources/GlobalConfig CodeMode选择**Client Server**, 点击Unity菜单 -> ET -> Compile(或按快捷键**F6**)进行编译  
 
-6. 打开ET.sln，**编译整个ET.sln**，注意要翻墙，否则可能nuget包下载不下来，导致编译出错(翻墙后如果还有报错解决不了可以尝试先用VS打开ET.sln编译一次后再回到Rider重新编译一次)
+7. 打开ET.sln，**编译整个ET.sln**，注意要翻墙，否则可能nuget包下载不下来，导致编译出错(翻墙后如果还有报错解决不了可以尝试先用VS打开ET.sln编译一次后再回到Rider重新编译一次)
 
-7. Unity中双击'Assets/Scenes'目录中的**Init**场景，点击Play(▶)即可运行
+8. Unity中双击'Assets/Scenes'目录中的**Init**场景，点击Play(▶)即可运行
 
-8. 帧同步默认是一个人匹配，如果需要多人匹配，修改**LSConstValue.cs**中的**MatchCount** 客户端服务端重启即可
+9.  帧同步默认是一个人匹配，如果需要多人匹配，修改**LSConstValue.cs**中的**MatchCount** 客户端服务端重启即可
 
-9. 注意要独立启动服务器，右键UnityHub，以管理员身份运行UnityHub，然后启动Unity（没有管理员启动是不行的，因为服务端要开启http服务，普通权限开不了），
+10. 注意要独立启动服务器，右键UnityHub，以管理员身份运行UnityHub，然后启动Unity（没有管理员启动是不行的，因为服务端要开启http服务，普通权限开不了），
    停止Unity Play，点开Unity菜单->ET->Server Tools->Start Server(Single Process)，这样就单独启动了服务端。打开Unity菜单 -> ET -> BuildTool中CodeMode改成Client，点击Unity Play，登录。  
    如果还是连接不上报10037错误，注意看ET/Logs目录，看有没有Error日志。 如果要用rider启动服务器，rider也必须用管理员权限启动
    注意一定要用 netsh http delete urlacl 命令删除掉所有自己添加的urlacl，具体使用方法请谷歌
 
-10. 有问题请论坛提问，贴出服务端error log跟客户端error log，没有日志无法回复
+11. 有问题请论坛提问，贴出服务端error log跟客户端error log，没有日志无法回复
 
 # 打包过程
 1. 点击HybridCLR -> Installer，点击安装，等待安装完成
