--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -13,7 +13,7 @@
 
 5. 在Project视图中选中'Assets/Resources/GlobalConfig'，把AppType选择成'**Demo(状态同步)**'或者'**LockStep(帧同步)**'  
 
-6. Assets/Resources/GlobalConfig CodeMode选择**Client Server**, 点击Unity菜单 -> ET -> Compile(或按快捷键**F6**)进行编译  
+6. Assets/Resources/GlobalConfig CodeMode选择**Client Server** （Unity BuildSettings切换到Windows平台，其它平台不支持ClientServer模式）, 点击Unity菜单 -> ET -> Compile(或按快捷键**F6**)进行编译  
 
 7. 打开ET.sln，**编译整个ET.sln**，注意要翻墙，否则可能nuget包下载不下来，导致编译出错(翻墙后如果还有报错解决不了可以尝试先用VS打开ET.sln编译一次后再回到Rider重新编译一次)
 
