更新运行指南

--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -13,7 +13,7 @@
 
 5. 打开工程后，点击Unity菜单 -> Edit -> Preferences -> External Tools，点击下拉框'External ScriptEditor'选择Rider，Generate .csproj files for全部不要勾选  
 
-6. 在Project视图中选中'Assets/Resources/GlobalConfig'，把AppType选择成'**Demo(状态同步)**'或者'**LockStep(帧同步)**'  
+6. 在Project视图中选中'Assets/Resources/GlobalConfig'，SceneName填StateSync或着LockStep, 分别对应状态同步和帧同步
 
 7. Assets/Resources/GlobalConfig CodeMode选择**Client Server** （Unity BuildSettings切换到Windows平台，其它平台不支持ClientServer模式）, 点击Unity菜单 -> ET -> Compile(或按快捷键**F6**)进行编译  
 
