更新运行指南

--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -11,7 +11,7 @@
 
 4. 启动UnityHub，打开(Open) -> 选中'ET/Unity'文件夹所在目录后打开工程
 
-5. 打开工程后，点击Unity菜单 -> Edit -> Preferences -> External Tools，点击下拉框'External ScriptEditor'选择Rider，Generate .csproj files for全部不要勾选  
+5. 打开工程后，点击Unity菜单 -> Edit -> Preferences -> External Tools，点击下拉框'External ScriptEditor'选择Rider，Generate .csproj files for要勾选前两个  
 
 6. 在https://github.com/orgs/ET-Packages/repositories 中选择包安装，目前有两个demo， cn.etetet.lockstep跟cn.etetet.statesync分别是帧同步跟状态同步
    
