更新运行指南

--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -9,7 +9,7 @@
    
 3. 整个过程请开启全局翻墙，否则各种unity包 nuget包下载不下来，报memerypack等错误  
 
-4. 启动UnityHub，打开(Open) -> 选中'ET/Unity'文件夹所在目录后打开工程
+4. 启动UnityHub，打开(Open) -> 选中'ET'文件夹所在目录后打开工程
 
 5. 打开工程后，点击Unity菜单 -> Edit -> Preferences -> External Tools，点击下拉框'External ScriptEditor'选择Rider，Generate .csproj files for要勾选前两个  
 
@@ -25,7 +25,7 @@
 
 11. 用Rider打开ET.sln，**编译ET.Proto跟ET.Excel**工程，编译完成，运行Unity菜单 ET->ExcelExporter 跟 ET->Proto2CS 分别生成配置文件跟消息文件
     
-12. 生成完成后，运行ET->CodeMode Refresh，这一步是根据CodeMode是Client还是ClientServer，生成不同的AssemblyReference文件，关联到Model ModelView Hotfix HotfixView中
+12. 生成完成后，运行ET->Packages Refresh，这一步是根据CodeMode是Client还是ClientServer，生成不同的AssemblyReference文件，关联到Model ModelView Hotfix HotfixView中
     
 13. 再次打开Rider, 编译整个ET.sln, 注意要翻墙，否则可能nuget包下载不下来，导致编译出错(翻墙后如果还有报错解决不了可以尝试先用VS打开ET.sln编译一次后再回到Rider重新编译一次)
     
