更新运行指南

--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -9,7 +9,7 @@
    
 3. 整个过程请开启全局翻墙，否则各种unity包 nuget包下载不下来，报memerypack等错误  
 
-4. 启动UnityHub，打开(Open) -> 选中'ET'文件夹所在目录后打开工程
+4. 启动UnityHub，打开(Open) -> 选中'ET'文件夹所在目录后打开工程，特别注意，ET9的目录结构跟ET8.1完全不同，请全新下载整个工程，不要从老的工程切过来  
 
 5. 打开工程后，点击Unity菜单 -> Edit -> Preferences -> External Tools，点击下拉框'External ScriptEditor'选择Rider，Generate .csproj files for要勾选前两个  
 
