优化依赖包下载

--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -17,7 +17,7 @@
    
 7. 复制demo包的git地址，例如https://github.com/ET-Packages/cn.etetet.lockstep.git#0.0.1  其中#0.0.1代表版本号，可以选择不同的版本，版本号是库的tag
    
-8. 打开Unity的PackageManager，点击左上角加号，选择add package from git url，粘贴进去，点击右边add，会把所有的依赖包下载，中间会弹出要安装依赖包，请点击Install，注意demo的git url也要带版本号
+8. 打开Unity的PackageManager，点击左上角加号，选择add package from git url，粘贴进去，点击右边add，会把所有的依赖包下载，如果没有出现日志git Dependencies are all installed，说明安装不完整，可以重新点击ET->RepairDependencies修复，直到安装成功
     
 9. 从demo包中，Packages/cn.etetet.lockstep 或者 Packages/cn.etetet.statesync 复制ET.sln到Unity工程目录，因为每个demo的工程文件可能不同，所以需要复制一下
 
