--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -25,28 +25,32 @@
    
 9.  打开Unity的PackageManager，点击左上角加号，选择add package by name，输入包名，点击右边add，会把所有的依赖包下载，如果没有出现日志git Dependencies are all installed，说明安装不完整，可以重新点击ET->RepairDependencies修复，直到安装成功
     
-10. 从demo包中，Packages/cn.etetet.lockstep 或者 Packages/cn.etetet.statesync 复制ET.sln到Unity工程目录，因为每个demo的工程文件可能不同，所以需要复制一下
-
-11. 用Rider打开ET.sln，**编译ET.Proto跟ET.Excel**工程，编译完成，运行Unity菜单 ET->ExcelExporter 跟 ET->Proto2CS 分别生成配置文件跟消息文件
+10. 安装完成点击Unity菜单，Assets->ReImport All, 这里主要是Unity有bug，刚刚装上的包可能因为代码是编译不过的，导致有些资源无法显示  
     
-12. 生成完成后，运行ET->Packages Refresh，这一步是根据CodeMode是Client还是ClientServer，生成不同的AssemblyReference文件，关联到Model ModelView Hotfix HotfixView中
+11. 点击Unity菜单 Assets->Open C# Project，这一步会复制demo中的ET.sln到根目录，然后打开ET.sln  
+
+12. **编译ET.Proto跟ET.Excel**工程，编译完成，运行Unity菜单 ET->ExcelExporter 跟 ET->Proto2CS 分别生成配置文件跟消息文件
     
-13. 再次打开Rider, 编译整个ET.sln, 注意要翻墙，否则可能nuget包下载不下来，导致编译出错(翻墙后如果还有报错解决不了可以尝试先用VS打开ET.sln编译一次后再回到Rider重新编译一次)
+13. 生成完成后，运行ET->Packages Refresh，这一步是根据CodeMode是Client还是ClientServer，生成不同的AssemblyReference文件，关联到Model ModelView Hotfix HotfixView中
     
-14. Unity中，打开Packages/ET.Init中的GlobalConfig，在SceneName中填上你下载的demo名字 LockStep或者StateSync
+14. 再次打开Rider, 编译整个ET.sln, 注意要翻墙，否则可能nuget包下载不下来，导致编译出错(翻墙后如果还有报错解决不了可以尝试先用VS打开ET.sln编译一次后再回到Rider重新编译一次)
+    
+15. Unity中，打开Packages/ET.Init中的GlobalConfig，在SceneName中填上你下载的demo名字 LockStep或者StateSync
 
-15. Unity中双击Packages/ET.Loader/Scenes/Init场景，点击Play(▶)即可运行
+16. Unity中双击Packages/ET.Loader/Scenes/Init场景，点击Play(▶)即可运行
+    
+17. 出现如下报错   [Package Manager Window] Error searching for packages.  不用处理，这是因为github package的注册表跟unity有些不兼容导致的，忽略即可 
 
-16. 帧同步默认是一个人匹配，如果需要多人匹配，修改**LSConstValue.cs**中的**MatchCount** 客户端服务端重启即可
+18. 帧同步默认是一个人匹配，如果需要多人匹配，修改**LSConstValue.cs**中的**MatchCount** 客户端服务端重启即可
 
-17.  注意要独立启动服务器，右键UnityHub，以管理员身份运行UnityHub，然后启动Unity（没有管理员启动是不行的，因为服务端要开启http服务，普通权限开不了），
+19.  注意要独立启动服务器，右键UnityHub，以管理员身份运行UnityHub，然后启动Unity（没有管理员启动是不行的，因为服务端要开启http服务，普通权限开不了），
    停止Unity Play，点开Unity菜单->ET->Server Tools->Start Server(Single Process)，这样就单独启动了服务端。打开Unity菜单 -> ET -> BuildTool中CodeMode改成Client，点击Unity Play，登录。  
    如果还是连接不上报10037错误，注意看ET/Logs目录，看有没有Error日志。 如果要用rider启动服务器，rider也必须用管理员权限启动
    注意一定要用 netsh http delete urlacl 命令删除掉所有自己添加的urlacl，具体使用方法请谷歌
 
-18.  注意独立运行服务器的目录不再是Bin目录，而是Bin的上一层目录，也就是Unity目录，比如 dotnet.exe Bin/ET.App.dll --Console=1
+20.  注意独立运行服务器的目录不再是Bin目录，而是Bin的上一层目录，也就是Unity目录，比如 dotnet.exe Bin/ET.App.dll --Console=1
 
-19.  有问题请论坛提问，贴出服务端error log跟客户端error log，没有日志无法回复
+21.  有问题请论坛提问，贴出服务端error log跟客户端error log，没有日志无法回复
 
 # 打包过程
 1. 点击HybridCLR -> Installer，点击安装，等待安装完成
