修复一个显示错误

--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -13,7 +13,7 @@
 
 5. 打开工程后，点击Unity菜单 -> Edit -> Preferences -> External Tools，点击下拉框'External ScriptEditor'选择Rider，Generate .csproj files for要勾选前两个  
    
-6. 在你的github中获取token，获取方法：打开 https://github.com/settings/tokens，选择tokens(classic),点击generate new token，复制你的token保存
+6. 在你的github中获取token，获取方法：打开 https://github.com/settings/tokens 选择tokens(classic),点击generate new token，复制你的token保存
    
 7. 打开菜单Packages->Manage scope registries, 点击ET-Packages Edit, 把你的github token粘贴到token里面 save，然后再看到User Credentials on this computer点+号，
    Registry URL填入 https://npm.pkg.github.com/@ET-Packages
