--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -23,17 +23,17 @@
 
 8. 在https://github.com/orgs/ET-Packages/packages 中选择包安装，目前有两个demo， cn.etetet.lockstep跟cn.etetet.statesync分别是帧同步跟状态同步
    
-9.  打开Unity的PackageManager，点击左上角加号，选择add package by name，输入包名，点击右边add，会把所有的依赖包下载，如果没有出现日志git Dependencies are all installed，说明安装不完整，可以重新点击ET->RepairDependencies修复，直到安装成功
+9.  打开Unity的PackageManager，点击左上角加号，选择add package by name，输入包名，点击右边add，会把所有的依赖包下载，如果没有出现日志git Dependencies are all installed，说明安装不完整，可以重新点击ET->RepairDependencies修复，直到安装成功，这时候仍然有大量报错，暂时不用管  
     
 10. 安装完成点击Unity菜单，Assets->ReImport All, 这里主要是Unity有bug，刚刚装上的包可能因为代码是编译不过的，导致有些资源无法显示  
-    
-11. 点击Unity菜单 Assets->Open C# Project，这一步会复制demo中的ET.sln到根目录，然后打开ET.sln  
 
-12. **编译ET.Proto跟ET.Excel**工程，编译完成，运行Unity菜单 ET->ExcelExporter 跟 ET->Proto2CS 分别生成配置文件跟消息文件
+11. 运行Unity菜单 ET->ExcelExporter 跟 ET->Proto2CS 分别生成配置文件跟消息文件
     
-13. 生成完成后，运行ET->Packages Refresh，这一步是根据CodeMode是Client还是ClientServer，生成不同的AssemblyReference文件，关联到Model ModelView Hotfix HotfixView中
+12. 生成完成后，运行ET->Packages Refresh，这一步是根据CodeMode是Client还是ClientServer，生成不同的AssemblyReference文件，关联到Model ModelView Hotfix HotfixView中
     
-14. 再次打开Rider, 编译整个ET.sln, 注意要翻墙，否则可能nuget包下载不下来，导致编译出错(翻墙后如果还有报错解决不了可以尝试先用VS打开ET.sln编译一次后再回到Rider重新编译一次)
+13. 点击Unity菜单 Assets->Open C# Project，这一步会自动复制demo中的ET.sln到根目录，然后打开ET.sln  
+    
+14. 编译整个ET.sln, 注意要翻墙，否则可能nuget包下载不下来，导致编译出错(翻墙后如果还有报错解决不了可以尝试先用VS打开ET.sln编译一次后再回到Rider重新编译一次)
     
 15. Unity中，打开Packages/ET.Init中的GlobalConfig，在SceneName中填上你下载的demo名字 LockStep或者StateSync
 
