--- a/Book/8.1ET Package制作指南.md
+++ b/Book/8.1ET Package制作指南.md
@@ -32,5 +32,5 @@
 8. 注意，假如package是一个完整的可运行的demo，需要包含DotNet~目录，里面放好Model跟Hotfix工程，需要将ET.sln工程复制到包中，这样方便使用者可以复制这个sln到根目录，双击使用  
 9.  DotNet~目录中的csproj工程可以引用其它包的csproj，也可以引用nuget等，都没有限制  
 10. Model ModelView Hotfix HotfixView中的引用怎么配置？因为每个包都可能有这四个目录，每个包的4个目录引用的程序集都可能不一样，ET提供了一种方法，在这四个目录下放置一个asmdef.txt，写好这个目录要引用哪些程序集  
-    因为最终这些目录会合并到demo的4个程序集中去，我们可以运行ET->Update Model Hotfix Assembly Define来将所有的引用最终设置到demo的Model ModelView Hotfix HotfixView四个程序集的引用中去  
+    因为最终这些目录会合并到demo的4个程序集中去，我们可以运行ET->Update Packages来将所有的引用最终设置到demo的Model ModelView Hotfix HotfixView四个程序集的引用中去  
 11. 如果自己制作的包需要依赖其它git包，例如memorypack，那么可以在自己项目中的packagegit.json文件添加GitDependencies项，具体可以参考cn.etetet.core包  
