更新ET Package制作指南

--- a/Book/8.1ET Package制作指南.md
+++ b/Book/8.1ET Package制作指南.md
@@ -34,3 +34,4 @@
 10. Model ModelView Hotfix HotfixView中的引用怎么配置？因为每个包都可能有这四个目录，每个包的4个目录引用的程序集都可能不一样，ET提供了一种方法，在这四个目录下放置一个asmdef.txt，写好这个目录要引用哪些程序集  
     因为最终这些目录会合并到demo的4个程序集中去，我们可以运行ET->Update Packages来将所有的引用最终设置到demo的Model ModelView Hotfix HotfixView四个程序集的引用中去  
 11. 如果自己制作的包需要依赖其它git包，例如memorypack，那么可以在自己项目中的packagegit.json文件添加GitDependencies项，具体可以参考cn.etetet.core包  
+12. demo包制作需要给Model ModelView Hotfix HotfixView4个asmdef加上INITED宏，防止包一下载下来就生效，导致错误。只有在运行Package Refresh后才会加上INITED宏，这样4个程序集才会生效
