继续优化工作流，增加ET->Init按钮，一键初始化

--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -27,30 +27,28 @@
     
 10. 安装完成点击Unity菜单，Assets->ReImport All, 这里主要是Unity有bug，刚刚装上的包可能因为代码是编译不过的，导致有些资源无法显示  
 
-11. 运行Unity菜单 ET->ExcelExporter 跟 ET->Proto2CS 分别生成配置文件跟消息文件
+11. 运行Unity菜单 ET->Init （这一步会导Excel 导Proto 生成assemlbyreference 添加INITED宏）
     
-12. 生成完成后，运行ET->Packages Refresh，这一步是根据CodeMode是Client还是ClientServer，生成不同的AssemblyReference文件，关联到Model ModelView Hotfix HotfixView中
+12. 点击Unity菜单 Assets->Open C# Project，这一步会自动复制demo中的ET.sln到根目录，然后打开ET.sln  
     
-13. 点击Unity菜单 Assets->Open C# Project，这一步会自动复制demo中的ET.sln到根目录，然后打开ET.sln  
+13. 编译整个ET.sln, 注意要翻墙，否则可能nuget包下载不下来，导致编译出错(翻墙后如果还有报错解决不了可以尝试先用VS打开ET.sln编译一次后再回到Rider重新编译一次)
     
-14. 编译整个ET.sln, 注意要翻墙，否则可能nuget包下载不下来，导致编译出错(翻墙后如果还有报错解决不了可以尝试先用VS打开ET.sln编译一次后再回到Rider重新编译一次)
-    
-15. Unity中，打开Packages/ET.Init中的GlobalConfig，在SceneName中填上你下载的demo名字 LockStep或者StateSync
+14. Unity中，打开Packages/ET.Init中的GlobalConfig，在SceneName中填上你下载的demo名字 LockStep或者StateSync
 
-16. Unity中双击Packages/ET.Loader/Scenes/Init场景，点击Play(▶)即可运行
+15. Unity中双击Packages/ET.Loader/Scenes/Init场景，点击Play(▶)即可运行
     
-17. 出现如下报错   [Package Manager Window] Error searching for packages.  不用处理，这是因为github package的注册表跟unity有些不兼容导致的，忽略即可 
+16. 出现如下报错   [Package Manager Window] Error searching for packages.  不用处理，这是因为github package的注册表跟unity有些不兼容导致的，忽略即可 
 
-18. 帧同步默认是一个人匹配，如果需要多人匹配，修改**LSConstValue.cs**中的**MatchCount** 客户端服务端重启即可
+17. 帧同步默认是一个人匹配，如果需要多人匹配，修改**LSConstValue.cs**中的**MatchCount** 客户端服务端重启即可
 
-19.  注意要独立启动服务器，右键UnityHub，以管理员身份运行UnityHub，然后启动Unity（没有管理员启动是不行的，因为服务端要开启http服务，普通权限开不了），
+18.  注意要独立启动服务器，右键UnityHub，以管理员身份运行UnityHub，然后启动Unity（没有管理员启动是不行的，因为服务端要开启http服务，普通权限开不了），
    停止Unity Play，点开Unity菜单->ET->Server Tools->Start Server(Single Process)，这样就单独启动了服务端。打开Unity菜单 -> ET -> BuildTool中CodeMode改成Client，点击Unity Play，登录。  
    如果还是连接不上报10037错误，注意看ET/Logs目录，看有没有Error日志。 如果要用rider启动服务器，rider也必须用管理员权限启动
    注意一定要用 netsh http delete urlacl 命令删除掉所有自己添加的urlacl，具体使用方法请谷歌
 
-20.  注意独立运行服务器的目录不再是Bin目录，而是Bin的上一层目录，也就是Unity目录，比如 dotnet.exe Bin/ET.App.dll --Console=1
+19.  注意独立运行服务器的目录不再是Bin目录，而是Bin的上一层目录，也就是Unity目录，比如 dotnet.exe Bin/ET.App.dll --Console=1
 
-21.  有问题请论坛提问，贴出服务端error log跟客户端error log，没有日志无法回复
+20.  有问题请论坛提问，贴出服务端error log跟客户端error log，没有日志无法回复
 
 # 打包过程
 1. 点击HybridCLR -> Installer，点击安装，等待安装完成
