--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -1,8 +1,8 @@
 # 运行步骤
 1. IDE安装
 
-   **使用[Rider2023.3](https://www.jetbrains.com/zh-cn/rider/)**(更新到最新版)，需要安装以下内容：
-   - 安装.Net8
+   **使用[Rider2023.4](https://www.jetbrains.com/zh-cn/rider/)**(更新到最新版)，需要安装以下内容：
+   - windows安装.Net8， mac请用homebrew安装.Net8跟powershell  
    - 不支持VS，新人用VS搞出各种问题请不要来问我，我也没用过VS，后期搞熟了可以自己改用VS  
    
 2. 该分支必须使用Unity**2022.3.15**(初学者请在此版本用熟后再切换其他版本)  
@@ -27,9 +27,9 @@
     
 10. 安装完成点击Unity菜单，Assets->ReImport All, 这里主要是Unity有bug，刚刚装上的包可能因为代码是编译不过的，导致有些资源无法显示  
 
-11. 运行Unity菜单 ET->Init （这一步会导Excel 导Proto 生成assemlbyreference 添加INITED宏）
+11. 运行Unity菜单 ET->Init （这一步会导Excel 导Proto 生成assemlbyreference 添加INITED宏，并且自动链接demo中的ET.sln到根目录）
     
-12. 点击Unity菜单 Assets->Open C# Project，这一步会自动复制demo中的ET.sln到根目录，然后打开ET.sln  
+12. 点击Unity菜单 Assets->Open C# Project，这里由于修改了rider插件，会自动打开ET.sln
     
 13. 编译整个ET.sln, 注意要翻墙，否则可能nuget包下载不下来，导致编译出错(翻墙后如果还有报错解决不了可以尝试先用VS打开ET.sln编译一次后再回到Rider重新编译一次)
     
