更新运行指南

--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -25,9 +25,9 @@
    
 9.  打开Unity的PackageManager，点击左上角加号，选择add package by name，输入包名，点击右边add，会把所有的依赖包下载，如果没有出现日志git Dependencies are all installed，说明安装不完整，可以重新点击ET->RepairDependencies修复，直到安装成功，这时候仍然有大量报错，暂时不用管  
     
-10. 安装完成点击Unity菜单，Assets->ReImport All, 这里主要是Unity有bug，刚刚装上的包可能因为代码是编译不过的，导致有些资源无法显示  
+10. 安装完成点击Unity菜单，Assets->ReImport All, 这里主要是Unity有bug，有些资源无法显示  
 
-11. 运行Unity菜单 ET->Init （这一步会导Excel 导Proto 生成assemlbyreference 添加INITED宏，并且自动链接demo中的ET.sln到根目录）
+11. 运行Unity菜单 ET->StateSync->Init或者ET->LockStep->Init （这一步会导Excel 导Proto 生成assemlbyreference 添加INITED宏，并且自动链接demo中的ET.sln到根目录）
     
 12. 点击Unity菜单 Assets->Open C# Project，这里由于修改了rider插件，会自动打开ET.sln
     
