更新运行指南

--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -5,7 +5,7 @@
    - windows安装.Net8， mac请用homebrew安装.Net8跟powershell  
    - 不支持VS，新人用VS搞出各种问题请不要来问我，我也没用过VS，后期搞熟了可以自己改用VS  
 
-2.  出现如下报错   [Package Manager Window] Error searching for packages.  不用处理，这是因为github package的注册表跟unity有些不兼容导致的，忽略即可 
+2. 出现如下报错   [Package Manager Window] Error searching for packages.  不用处理，这是因为github package的注册表跟unity有些不兼容导致的，忽略即可 
    
 3. 该分支必须使用Unity**2022.3.15**(初学者请在此版本用熟后再切换其他版本)  
    
@@ -23,9 +23,9 @@
    always auth 填 true
    点击add
 
-9. 在https://github.com/orgs/ET-Packages/packages 中选择包安装，目前有两个demo， cn.etetet.lockstep跟cn.etetet.statesync分别是帧同步跟状态同步
+9. 在https://github.com/orgs/ET-Packages/packages 中选择一个demo包安装，目前有两个demo， cn.etetet.lockstep跟cn.etetet.statesync分别是帧同步跟状态同步（一个工程只能安装一个demo，不能同时装多个）
    
-10. 打开Unity的PackageManager，点击左上角加号，选择add package by name，输入包名，点击右边add，会把所有的依赖包下载，如果没有出现日志git Dependencies are all installed，说明安装不完整，可以重新点击ET->RepairDependencies修复，直到安装成功，这时候仍然有大量报错，暂时不用管  
+10. 打开Unity的PackageManager，点击左上角加号，选择add package by name，输入包名，点击右边add，会把所有的依赖包下载，如果没有出现日志git Dependencies are all installed，说明安装不完整，可以重新点击ET->Init->RepairDependencies修复，直到安装成功，这时候仍然有大量报错，暂时不用管。注意，在PackageManager中观察一下，所有的ET开头的包都会是Custom包，这是因为安装后ET会把包挪到Packages目录，从而变成Custom包，如果不是Custom，请重新点击ET->Init->RepairDependencies然后刷新Unity
     
 11. 安装完成点击Unity菜单，Assets->ReImport All, 这里主要是Unity有bug，有些资源无法显示  
 
@@ -87,6 +87,4 @@
 5. 没编译服务端所有工程
 6. Unity版本不兼容
 7. Win7用户，没有特别设置
-8. 编译过程中如果出现依赖问题，也有可能是'Unity菜单 -> Edit -> Preferences -> External Tools -> Generate .csproj files for'：
-   当中勾选了：'Registry packages' 或 'Build-in packages', 请记得都**不要勾选(□)**
-9. 如果打包报错缺少"StreamingAsset"，自己在 'ET/Unity/Assets' 下新建一个 StreamingAsset 文件夹即可
+8. 如果打包报错缺少"StreamingAsset"，自己在 'ET/Unity/Assets' 下新建一个 StreamingAsset 文件夹即可
