更新运行指南

--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -45,7 +45,7 @@
    注意一定要用 netsh http delete urlacl 命令删除掉所有自己添加的urlacl，具体使用方法请谷歌
    客户端注意要打开cn.etetet.loader/Resources/GlobalConfig, 把CodeMode换成Client
 
-18. 注意独立运行服务器的目录不再是Bin目录，而是Bin的上一层目录，也就是Unity目录，比如 dotnet.exe Bin/ET.App.dll --Console=1
+18. 注意独立运行服务器的目录不再是Bin目录，而是Bin的上一层目录，也就是Unity目录，比如 dotnet.exe Bin/ET.App.dll --Console=1。用rider启动默认是在Bin目录，需要自己修改运行目录，去掉Bin
 
 19. 有问题请论坛提问，贴出服务端error log跟客户端error log，没有日志无法回复
 
