更新运行指南

--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -25,7 +25,7 @@
 
 9. 在https://github.com/orgs/ET-Packages/packages 中选择一个demo包安装，目前有两个demo， cn.etetet.lockstep跟cn.etetet.statesync分别是帧同步跟状态同步（一个工程只能安装一个demo，不能同时装多个）
    
-10. 打开Unity的PackageManager，点击左上角加号，选择add package by name，输入包名，点击右边add，会把所有的依赖包下载，如果没有出现日志git Dependencies are all installed，说明安装不完整，可以重新点击ET->Init->RepairDependencies修复，直到安装成功，这时候仍然有大量报错，暂时不用管。注意，在PackageManager中观察一下，所有的ET开头的包都会是Custom包，这是因为安装后ET会把包挪到Packages目录，从而变成Custom包，如果不是Custom，请重新点击ET->Init->RepairDependencies然后刷新Unity
+10. 打开Unity的菜单Windows->PackageManager，点击左上角加号，选择add package by name，输入包名，点击右边add，会把所有的依赖包下载，如果没有出现日志git Dependencies are all installed，说明安装不完整，可以重新点击ET->Init->RepairDependencies修复，直到安装成功，这时候仍然有大量报错，暂时不用管。注意，在PackageManager中观察一下，所有的ET开头的包都会是Custom包，这是因为安装后ET会把包挪到Packages目录，从而变成Custom包，如果不是Custom，请重新点击ET->Init->RepairDependencies然后刷新Unity
     
 11. 安装完成点击Unity菜单，Assets->ReImport All, 这里主要是Unity有bug，有些资源无法显示  
 
