更新运行指南

--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -2,7 +2,7 @@
 1. IDE安装
 
    **使用[Rider2023.4](https://www.jetbrains.com/zh-cn/rider/)**(更新到最新版)，需要安装以下内容：
-   - windows安装.Net8， mac请用homebrew安装.Net8跟powershell  
+   - windows上用visual studio安装最新的.Net8， mac请用homebrew安装.Net8跟powershell  
    - 不支持VS，新人用VS搞出各种问题请不要来问我，我也没用过VS，后期搞熟了可以自己改用VS  
 
 2. 出现如下报错   [Package Manager Window] Error searching for packages.  不用处理，这是因为github package的注册表跟unity有些不兼容导致的，忽略即可 
@@ -24,6 +24,7 @@
    点击add
 
 9. 在https://github.com/orgs/ET-Packages/packages 中选择一个demo包安装，目前有两个demo， cn.etetet.lockstep跟cn.etetet.statesync分别是帧同步跟状态同步（一个工程只能安装一个demo，不能同时装多个）
+    新手最好先选择状态同步，因为我都是先修改状态同步，偶尔会漏改了帧同步，等状态同步跑通再尝试帧同步
    
 10. 打开Unity的菜单Windows->PackageManager，点击左上角加号，选择add package by name，输入包名，点击右边add，会把所有的依赖包下载，如果没有出现日志git Dependencies are all installed，说明安装不完整，可以重新点击ET->Init->RepairDependencies修复，直到安装成功，这时候仍然有大量报错，暂时不用管。注意，在PackageManager中观察一下，所有的ET开头的包都会是Custom包，这是因为安装后ET会把包挪到Packages目录，从而变成Custom包，如果不是Custom，请重新点击ET->Init->RepairDependencies然后刷新Unity
     
