提交运行指南

--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -57,7 +57,7 @@
 
 3. 点击HybridCLR -> Generate -> All
 
-4. 点击HybridCLR -> CopyAotDlls，这一步会把需要补充元数据的dll复制到'Assets/Bundles/AotDlls'目录
+4. 点击ET -> HybridCLR -> CopyAotDlls，这一步会把需要补充元数据的dll复制到'Assets/Bundles/AotDlls'目录
 
 5. 打开YooAsset -> AssetBundle Builder窗口，按照以下步骤操作:
 
