--- a/Book/8.1ET Package制作指南.md
+++ b/Book/8.1ET Package制作指南.md
@@ -36,3 +36,4 @@
 11. 如果自己制作的包需要依赖其它git包，例如memorypack，那么可以在自己项目中的packagegit.json文件添加GitDependencies项，具体可以参考cn.etetet.core包  
 12. demo包制作需要给Model ModelView Hotfix HotfixView4个asmdef加上INITED宏，防止包一下载下来就生效，导致错误。只有在运行ET->Init后才会加上INITED宏，这样4个程序集才会生效
 13. 注意为了让自定义菜单简洁统一，Package自定义的菜单使用"ET->Package名->具体功能" 这种风格，例如ET->Loader->Init
+14. 为了控制打包裁剪问题，demo可以在自己包目录放置一个link.xml控制裁剪，init的时候会把link.xml链接到Assets目录，因为Unity只扫描Assets中的link.xml
